<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">



            <ImageView
                android:id="@+id/iv_profilepic"
                android:layout_width="@dimen/dimens_150dp"
                android:layout_height="@dimen/dimens_150dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_splash" />

            <TextView
                android:id="@+id/tv_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:text="@string/str_register"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_18sp" />

            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_you"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/bg_textbox"
                android:drawableLeft="@drawable/full_name"
                android:drawablePadding="@dimen/dimens_20dp"
                android:hint="@string/str_name"
                android:inputType="text"
                android:paddingLeft="@dimen/dimens_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/bg_textbox"
                android:drawableLeft="@drawable/email_address"
                android:drawablePadding="@dimen/dimens_20dp"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dimens_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/bg_textbox"
                android:drawableLeft="@drawable/mobile_number"
                android:drawablePadding="@dimen/dimens_20dp"
                android:hint="@string/str_phone"
                android:inputType="number"
                android:paddingLeft="@dimen/dimens_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />



            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/text_20"

                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/bg_textbox"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/dimens_20dp"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimens_10dp"
                android:textColor="@color/colorWhite"

                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/et_confrimpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/bg_textbox"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/dimens_20dp"
                android:hint="@string/str_recreatepwd"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimens_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />


            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/button_splash"
                android:text="@string/str_register"
                android:textColor="@color/colorWhite" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dimens_20dp"
                android:layout_marginRight="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:background="@color/colorWhite"></View>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_user"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimens_10dp"
                android:text="@string/str_login"

                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>