<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dimens_150dp"
            android:layout_height="@dimen/dimens_200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_splash" />

        <TextView
            android:id="@+id/tv_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/str_login"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_20" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_you"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawableLeft="@drawable/email_address"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_email"
            android:paddingLeft="@dimen/dimens_10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_20"

            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dimens_10dp"
            android:textColor="@color/colorWhite"

            android:textColorHint="@color/colorPrimary" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/button_splash"
            android:text="@string/str_login"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_forgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signIn"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/str_forgot"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16dp" />

        <TextView
            android:id="@+id/tv_loginwith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signIn"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/str_loginwid"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_facebook"
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_10dp"
                android:layout_marginRight="@dimen/dimens_10dp"
                android:src="@drawable/twitter" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/dimens_10dp"
            android:background="@color/colorWhite"></View>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_user"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/str_register"

            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16dp" />

    </LinearLayout>
</ScrollView>