<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_60dp"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backButton"
                android:layout_width="@dimen/dimens_40dp"
                android:layout_height="@dimen/dimens_40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:tint="@color/coloBlack" />


            <TextView
                android:id="@+id/tv_serviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/str_payment"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimens_10dp"
            android:background="@drawable/splash"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_50dp"
                    android:layout_marginTop="@dimen/dimens_20dp"
                    android:gravity="center"
                    android:text="@string/text_total_amount1"
                    android:textColor="@color/coloBlack"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_45dp">

                <TextView
                    android:id="@+id/textView_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_45dp"
                    android:gravity="center"
                    android:text="$1"
                    android:textColor="@color/coloBlack"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="@dimen/dimens_10dp"
                android:background="@color/coloBlack" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_45dp"
                android:layout_marginLeft="@dimen/dimens_30dp"
                android:layout_marginRight="@dimen/dimens_30dp"
                android:gravity="center_vertical"
                android:text="Select Payment Mode"
                android:textColor="@color/coloBlack"
                android:textSize="22dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/str_credit"
                    android:textAllCaps="true"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size_18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_20"
                    android:layout_marginRight="@dimen/text_20"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:text="Card Number"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size_16sp" />


                <Button
                    android:id="@+id/btn_clr"
                    android:layout_width="@dimen/dimens_60dp"
                    android:layout_height="@dimen/dimens_40dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/dimens_10dp"
                    android:layout_marginRight="@dimen/dimens_10dp"
                    android:text="Clear"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size_12sp"
                    android:visibility="gone" />

            </RelativeLayout>

            <EditText
                android:id="@+id/et_cardNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/bg_textbox"
                android:hint="@string/str_card"
                android:inputType="number"
                android:maxLength="19"
                android:paddingLeft="@dimen/dimens_20dp"
                android:textColor="@color/coloBlack"
                android:textColorHint="@color/coloBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/text_20"
                        android:text="Expiry Month"
                        android:textColor="@color/coloBlack"
                        android:textSize="@dimen/text_size_16sp" />

                    <EditText
                        android:id="@+id/et_mm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimens_10dp"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_textbox"
                        android:drawablePadding="@dimen/dimens_20dp"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:drawableTint="@color/coloBlack"
                        android:focusableInTouchMode="false"
                        android:hint="@string/str_yyy"
                        android:inputType="number"
                        android:paddingLeft="@dimen/dimens_20dp"
                        android:paddingRight="@dimen/dimens_10dp"
                        android:textColor="@color/coloBlack"
                        android:textColorHint="@color/coloBlack" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimens_20dp"
                        android:layout_marginRight="@dimen/text_20"
                        android:text="Expiry Year"
                        android:textColor="@color/coloBlack"
                        android:textSize="@dimen/text_size_16sp" />

                    <EditText
                        android:id="@+id/et_yyyy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimens_10dp"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_textbox"
                        android:drawablePadding="@dimen/dimens_20dp"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:drawableTint="@color/coloBlack"
                        android:focusableInTouchMode="false"
                        android:hint="@string/str_yyy"

                        android:inputType="number"
                        android:paddingLeft="@dimen/dimens_20dp"
                        android:paddingRight="@dimen/dimens_10dp"
                        android:textColor="@color/coloBlack"
                        android:textColorHint="@color/coloBlack" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_20"
                    android:layout_marginRight="@dimen/text_20"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:text="CVV"

                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size_16sp" />

                <EditText
                    android:id="@+id/et_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_20"
                    android:layout_marginRight="@dimen/text_20"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:background="@drawable/bg_textbox"
                    android:hint="@string/str_cvv"
                    android:inputType="numberPassword"
                    android:maxLength="3"
                    android:paddingLeft="@dimen/dimens_20dp"
                    android:textColor="@color/coloBlack"
                    android:textColorHint="@color/coloBlack" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgotpwd"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/dimens_60dp"
                android:layout_marginLeft="@dimen/text_20"
                android:layout_marginRight="@dimen/text_20"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:background="@drawable/button_splash"
                android:text="@string/str_proceed"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>